<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geometric_background_3">

    <Button
        android:id="@+id/nextPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/green2"
        android:text="@string/nextPageButtonTExt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="47dp"
        android:text="@string/enterDateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:text="@string/enterTimeText"
        app:layout_constraintEnd_toStartOf="@+id/enterDescriptionTextView"
        app:layout_constraintStart_toEndOf="@+id/enterDateTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="27dp"
        android:text="@string/enterDescriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterDateTextView" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

    <EditText
        android:id="@+id/editTextDate4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate3" />

    <EditText
        android:id="@+id/editTextDate5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate4" />

    <EditText
        android:id="@+id/editTextDate6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate5" />

    <EditText
        android:id="@+id/editTextDate7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate6" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/enterTimeTextView"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber5"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextNumber7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber6"
        tools:layout_editor_absoluteX="148dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="92dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="174dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="219dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="309dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="355dp" />

    <TableLayout
        android:layout_width="30dp"
        android:layout_height="16dp"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="224dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="421dp" />

</androidx.constraintlayout.widget.ConstraintLayout>